--- a/RepRaptor.desktop
+++ b/RepRaptor.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=RepRaptor
 Comment=A Qt RepRap gcode sender/host controller aimed to be fast and minimalistic.
-Exec=/usr/local/bin/repraptor
-Icon=/usr/local/share/icons/repraptor.png
+Exec=/usr/bin/RepRaptor
+Icon=/usr/share/icons/repraptor.png
 Terminal=false
 Type=Application
 Categories=Utility;Application;
