--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 install:
-  - sudo apt-get update
-  - sudo apt-get install libqt5-dev qmake
+  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  - sudo apt-get update -qq
+  - sudo apt-get install qtbase5-dev qt5-default qttools5-dev-tools
 
 script:
   - qmake -project
