--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ install:
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install qtbase5-dev qt5-default qttools5-dev-tools
+  - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
 
 script:
   - qmake -project
