--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 install:
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install qtbase5-dev qt5-default qttools5-dev-tools
-  - export QMAKE=/usr/lib/x86_64-linux-gnu/qt5/bin/qmake
+  - sudo apt-get install qtbase5-dev qt5-default qttools5-dev-tools libqt5serialport libqt5serialport5-dev
 
 script:
-  - qmake -project
-  - qmake RepRaptor.pro
+  - qt5-qmake RepRaptor.pro
   - make
