forgot --yes for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 install:
-  - sudo apt-add-repository ppa:beineri/opt-qt55
+  - sudo apt-add-repository --yes ppa:beineri/opt-qt55
   - sudo apt-get update -qq
   - apt-cache search libqt5serialport
   - sudo apt-get install qt55base qt55serialport qt55tools
